helper functions scrips

--- a/feature_generation.ipynb
+++ b/feature_generation.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "import helper_functions\n",
     "reload(helper_functions)\n",
-    "from helper_functions import bbands,save_figure,get_ttm_dates,separate_dates, days_difference,get_label\n",
+    "from fg_helper_functions import bbands,save_figure,get_ttm_dates,separate_dates, days_difference,get_label\n",
     "\n",
     "\n",
     "import warnings\n",
